--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   "scripts": {
     "build": "strapi build",
     "deploy": "strapi deploy",
-    "develop": "strapi develop",
+    "dev": "strapi develop",
     "export": "strapi export",
     "start": "NODE_OPTIONS='--max_old_space_size=4096' strapi start",
     "strapi": "strapi"
   },
   "dependencies": {
+    "@creazy231/strapi-plugin-apollo-sandbox": "^0.0.15",
     "@strapi/plugin-cloud": "4.25.10",
     "@strapi/plugin-graphql": "^4.25.10",
     "@strapi/plugin-i18n": "4.25.10",
     "@strapi/plugin-users-permissions": "4.25.10",
     "@strapi/strapi": "4.25.10",
     "better-sqlite3": "8.6.0",
+    "mysql": "^2.18.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
