update package json start script

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "deploy": "strapi deploy",
     "dev": "strapi develop",
     "export": "strapi export",
-    "start": "NODE_OPTIONS='--max_old_space_size=4096' strapi start",
+    "start": "strapi start",
     "strapi": "strapi"
   },
   "dependencies": {
