--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@strapi/plugin-graphql": "^4.25.10",
     "@strapi/plugin-i18n": "4.25.10",
     "@strapi/plugin-users-permissions": "4.25.10",
+    "@strapi/provider-upload-aws-s3": "^4.25.11",
     "@strapi/strapi": "4.25.10",
     "better-sqlite3": "8.6.0",
     "mysql": "^2.18.1",
@@ -28,7 +29,6 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
-    "strapi-provider-upload-do": "^3.6.9",
     "styled-components": "5.3.3"
   },
   "engines": {
