--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@strapi/provider-upload-aws-s3": "^5.0.6",
     "@strapi/strapi": "5.0.6",
     "better-sqlite3": "9.4.3",
+    "mysql2": "^3.11.4",
     "pg": "^8.13.1",
     "pg-connection-string": "^2.7.0",
     "react": "^18.0.0",
