--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "./**/*.js",
     // Force the JSON files in the src folder to be included
     "src/**/*.json"
-  ],
+, "types"  ],
 
   "exclude": [
     "node_modules/",
