--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "typescript": "^5"
   },
   "engines": {
-    "node": ">=18.0.0 <=20.10.0",
-    "npm": ">=6.0.0"
+    "node": "20.10.0",
+    "npm": "10.9.0"
   },
   "strapi": {
     "uuid": "18e6708a-53aa-4f7c-b06c-93733eb3d1e0"
