update node version

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "typescript": "^5"
   },
   "engines": {
-    "node": ">=18.0.0 <=22.x.x",
-    "npm": ">=6.0.0"
+    "node": "20.18.2",
+    "npm": "11.1.0"
   },
   "strapi": {
     "uuid": "2766cf1c-edc2-4889-a23c-5c9928896a49"
