--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.11.3",
     "@strapi/plugin-graphql": "^5.0.6",
-    "@strapi/plugin-users-permissions": "5.11.3",
+    "@strapi/plugin-users-permissions": "^5.11.3",
     "@strapi/provider-upload-aws-s3": "^5.0.6",
     "@strapi/strapi": "5.11.3",
     "better-sqlite3": "11.3.0",
